--- a/views/budget.handlebars
+++ b/views/budget.handlebars
@@ -52,26 +52,26 @@
             <div class="active content">
                 <a class="item">
                     <div class="header">
-                        Budget Usage
+                        Month-to-Date Usage
                     </div>
                     <div class="ui tiny olive inverted progress">
-                        <div class="bar" style="width: 54%"></div>
-                        <div class="label">Food and Dine Out</div>
+                        <div class="bar" style="width: {{homeUtil.monthUtil}}%"></div>
+                        <div class="label">Home and Utilization</div>
                     </div>
 
                     <div class="ui tiny teal inverted progress">
-                        <div class="bar" style="width:78%"></div>
-                        <div class="label">Transportation</div>
+                        <div class="bar" style="width:{{groceries.monthUtil}}%"></div>
+                        <div class="label">Groceries</div>
                     </div>
 
                     <div class="ui tiny purple inverted progress">
-                        <div class="bar" style="width: 54%"></div>
-                        <div class="label">Bills</div>
+                        <div class="bar" style="width: {{transport.monthUtil}}%"></div>
+                        <div class="label">Transport</div>
                     </div>
 
                     <div class="ui tiny yellow inverted progress">
-                        <div class="bar" style="width:78%"></div>
-                        <div class="label">Entertainment</div>
+                        <div class="bar" style="width:{{entEatout.monthUtil}}%"></div>
+                        <div class="label">Entertainment and Eat-out</div>
                     </div>
                 </a>
             </div>
@@ -140,7 +140,8 @@
                                     <div class="field">
                                         <h4 for="salary" class="budget-label">Salary Income</h4>
                                     </div>
-                                    <div class="field"><input type="number" class="amount income" id="salary-amount"></div>
+                                    <div class="field"><input type="number" class="amount income" id="salary-amount">
+                                    </div>
                                     <div class="field">
                                         <div class="ui selection dropdown" id="salary-cadence">
                                             <div class="default text">Cadence</div>
@@ -162,7 +163,8 @@
                                     <div class="field">
                                         <h4 for="income1" class="budget-label">Rental Income</h4>
                                     </div>
-                                    <div class="field"><input type="number" class="amount income" id="rental-amount"></div>
+                                    <div class="field"><input type="number" class="amount income" id="rental-amount">
+                                    </div>
                                     <div class="field">
                                         <div class="ui selection dropdown" id="rental-cadence">
                                             <div class="default text">Cadence</div>
@@ -184,7 +186,8 @@
                                     <div class="field">
                                         <h4 for="income1" class="budget-label">Other Income</h4>
                                     </div>
-                                    <div class="field"><input type="number" class="amount income" id="otherIncome-amount"></div>
+                                    <div class="field"><input type="number" class="amount income"
+                                            id="otherIncome-amount"></div>
                                     <div class="field">
                                         <div class="ui selection dropdown" id="otherIncome-cadence">
                                             <div class="default text">Cadence</div>
@@ -214,11 +217,13 @@
                         <div class="active content">
                             <div class="ui form">
                                 {{!-- <div class="ui vertical segment"> --}}
-                                <div class="three fields">
+                                <div class="three fields" id="gew">
                                     <div class="field">
                                         <h4 for="gas-elec-water" class="budget-label">Gas,Electricity,Water </h4>
                                     </div>
-                                    <div class="field"><input type="number" class="amount home utilities" id="gasElecWater-amount"></div>
+                                    <div class="field">
+                                        <input type="number" class="amount home utilities"
+                                            id="gasElecWater-amount"></div>
                                     <div class="field">
                                         <div class="ui selection dropdown" id="gasElecWater-cadence">
                                             <div class="default text">Cadence</div>
@@ -233,13 +238,17 @@
                                             </div>
                                         </div>
                                     </div>
+                                     <div class="field" style="display:none">
+                                        <span class="subcat-total"></span>
+                                    </div>
                                 </div>
 
                                 <div class="three fields">
                                     <div class="field">
                                         <h4 for="mortgage" class="budget-label">Mortgage Repayment</h4>
                                     </div>
-                                    <div class="field"><input type="number" class="amount home utilities" id="mortgage-amount"></div>
+                                    <div class="field"><input type="number" class="amount home utilities"
+                                            id="mortgage-amount"></div>
                                     <div class="field">
                                         <div class="ui selection dropdown" id="mortgage-cadence">
                                             <div class="default text">Cadence</div>
@@ -261,7 +270,8 @@
                                     <div class="field">
                                         <h4 for="phone-internet" class="budget-label">Phone and Internet</h4>
                                     </div>
-                                    <div class="field"><input type="number" class="amount home utilities" id="phoneInt-amount"></div>
+                                    <div class="field"><input type="number" class="amount home utilities"
+                                            id="phoneInt-amount"></div>
                                     <div class="field">
                                         <div class="ui selection dropdown" id="phoneInt-cadence">
                                             <div class="default text">Cadence</div>
@@ -283,7 +293,8 @@
                                     <div class="field">
                                         <h4 for="hu-other" class="budget-label">Other</h4>
                                     </div>
-                                    <div class="field"><input type="number" class="amount home utilities" id="huOther-amount"></div>
+                                    <div class="field"><input type="number" class="amount home utilities"
+                                            id="huOther-amount"></div>
                                     <div class="field">
                                         <div class="ui selection dropdown" id="huOther-cadence">
                                             <div class="default text">Cadence</div>
@@ -318,7 +329,8 @@
                                     <div class="field">
                                         <h4 for="income1" class="budget-label">Food</h4>
                                     </div>
-                                    <div class="field"><input type="number" class="amount groceries" id="food-amount"></div>
+                                    <div class="field"><input type="number" class="amount groceries" id="food-amount">
+                                    </div>
                                     <div class="field">
                                         <div class="ui selection dropdown" id="food-cadence">
                                             <div class="default text">Cadence</div>
@@ -339,7 +351,8 @@
                                     <div class="field">
                                         <h4 for="income1" class="budget-label">Other</h4>
                                     </div>
-                                    <div class="field"><input type="number" class="amount groceries" id="groceriesOther-amount"></div>
+                                    <div class="field"><input type="number" class="amount groceries"
+                                            id="groceriesOther-amount"></div>
                                     <div class="field">
                                         <div class="ui selection dropdown" id="groceriesOther-cadence">
                                             <div class="default text">Cadence</div>
@@ -372,7 +385,8 @@
                                     <div class="field">
                                         <h4 for="income1" class="budget-label">Public Transport</h4>
                                     </div>
-                                    <div class="field"><input type="number" class="amount transport" id="publicTrans-amount"></div>
+                                    <div class="field"><input type="number" class="amount transport"
+                                            id="publicTrans-amount"></div>
                                     <div class="field">
                                         <div class="ui selection dropdown" id="publicTrans-cadence">
                                             <div class="default text">Cadence</div>
@@ -393,7 +407,8 @@
                                     <div class="field">
                                         <h4 for="income1" class="budget-label">Fuel and Parkings</h4>
                                     </div>
-                                    <div class="field"><input type="number" class="amount transport" id="fuelParkings-amount"></div>
+                                    <div class="field"><input type="number" class="amount transport"
+                                            id="fuelParkings-amount"></div>
                                     <div class="field">
                                         <div class="ui selection dropdown" id="fuelParkings-cadence">
                                             <div class="default text">Cadence</div>
@@ -426,7 +441,8 @@
                                     <div class="field">
                                         <h4 for="eatout" class="budget-label">Eat-out</h4>
                                     </div>
-                                    <div class="field"><input type="number" class="amount ent eatout" id="eatout-amount"></div>
+                                    <div class="field"><input type="number" class="amount ent eatout"
+                                            id="eatout-amount"></div>
                                     <div class="field">
                                         <div class="ui selection dropdown" id="eatout-cadence">
                                             <div class="default text">Cadence</div>
@@ -447,7 +463,8 @@
                                     <div class="field">
                                         <h4 for="ent" class="budget-label">Entertainment</h4>
                                     </div>
-                                    <div class="field"><input type="number" class="amount ent eatout" id="ent-amount"></div>
+                                    <div class="field"><input type="number" class="amount ent eatout" id="ent-amount">
+                                    </div>
                                     <div class="field">
                                         <div class="ui selection dropdown" id="ent-cadence">
                                             <div class="default text">Cadence</div>
@@ -482,8 +499,10 @@
 
 
                     <div class="item" id="button-accordion">
-                        <button class="ui green button" id="submit-budget"><i class="save icon"></i>Save Changes</button>
-                        <button class="ui red button" id="discard-budget"><i class="ban icon"></i>Discard Changes</button>
+                        <button class="ui green button" id="submit-budget"><i class="save icon"></i>Save
+                            Changes</button>
+                        <button class="ui red button" id="discard-budget"><i class="ban icon"></i>Discard
+                            Changes</button>
                     </div>
 
                 </div>
