--- a/views/budget.handlebars
+++ b/views/budget.handlebars
@@ -489,7 +489,7 @@
                     <div class="item" id="total-accordion">
                         <a class="active title">
                             {{!-- <i class="dropdown icon"></i> --}}
-                            <span class="budget-cat-title">Total</span>
+                            <span class="budget-cat-title">Month-End Budget</span>
                             <span class="budget-cat-total" id="budget-total">$0</span>
                         </a>
                         <div class="active content">
