--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -223,7 +223,7 @@
                     {{!-- overspent percentage --}}
                     <div class=" statistic">
                         <div class="value">
-                            128%
+                            0%
                         </div>
                         <div class="label">
                             Overspent
@@ -232,7 +232,7 @@
                     {{!-- overspent percentage --}}
                     <div class=" statistic">
                         <div class="value">
-                            $1200
+                            $0
                         </div>
                         <div class="label">
                             Exceeded Amount
@@ -242,7 +242,7 @@
                     {{!-- Number of Counts Violated --}}
                     <div class=" statistic">
                         <div class="value">
-                            3
+                            0
                         </div>
                         <div class="label">
                             Violated Counts
@@ -396,4 +396,4 @@
     </div>
 </div>
 <script src="/assets/js/index.js"></script>
-<script src="/assets/js/dashboard_chart.js"></script>
+{{!-- <script src="/assets/js/dashboard_chart.js"></script> --}}
